make some changes

--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@ https://silhouette204.github.io/Ecommerce/">
 </section>
   </body>
 
-  <footer >
-    <div class="grid" data-aos="fade-up" data-aos-duration="1200">
+  <footer>
+    <div class="grid">
       <p class="copyright"> Copyright &copy 2025 Devloop Alright Reserved</p>
       <ul class="socials">
         <li><a href="https://github.com/Silhouette204"><i class="fa-brands fa-github"></a></i></li>
@@ -139,10 +139,9 @@ https://silhouette204.github.io/Ecommerce/">
         <li><a href="https://www.facebook.com/johnlester.burce/"><i class="fa-brands fa-facebook"></a></i></li>
         <li><i class="fa-brands fa-twitter"></i></li>
       </ul>
-
-      
     </div>
   </footer>
+  
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>
     AOS.init();
